[package]
name = "bevy_panorbit_camera"
version = "0.13.1"
authors = ["Plonq"]
edition = "2021"
description = "A basic pan and orbit camera in Bevy"
keywords = ["gamedev", "bevy", "orbit", "camera"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonq/bevy_panorbit_camera"
homepage = "https://github.com/Plonq/bevy_panorbit_camera"
readme = "README.md"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_render"] }
bevy_egui = { version = "0.25", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.13" }
float-cmp = "0.9.0"
bevy_egui = { version = "0.25", default-features = false, features = ["render", "default_fonts"] }

[[example]]
name = "egui"
required-features = ["bevy_egui"]

[[example]]
name = "egui_multiple_windows"
required-features = ["bevy_egui"]
